# qpub

./: .gitignore  LICENSE  MANIFEST.in  README-Copy1.md  README.md  _README_TEMPLATE.md  conftest.py  dgaf.py  dodo.py  doit.cfg  noxfile.py  postBuild  pyproject.toml  readme.md  requirements.txt  setup.cfg  test_dgaf.ipynb
.github/workflows/: python.yaml  release.yml
dgaf/: __init__.py  __main__.py  api.py  base.py  conda.py  converters.py  docs.py  docs.xsh  dodo.py  doit.cfg  exceptions.py  exporters.py  files.py  lint.py  package.py  readme.md  sessions.py  tasks.py  tasks.xsh  test.py  util.py
dgaf/docs/: test_qpub.ipynb
dgaf/template/: __init__.py  _config.yml  flags.gitignore  postBuild  pyproject.toml  pyproject_poetry.toml  python.yaml
dgaf/templates/: _config.json  flit.json  mkdocs.json  poetry.json  precommit.json  pytest.json  setuptools.json  setuptools_cfg.json  setuptools_pyproject.json
dgaf/tests/: test_dgaf.py
docs/: readme.md  test_backends.ipynb  test_dgaf.ipynb  test_python_projects.ipynb  test_single_notebook.ipynb  test_stuff.ipynb
docs/tests/: readme.md  test_backends.ipynb  test_chapter.ipynb  test_datascience_project.ipynb  test_python_projects.ipynb  test_single_notebook.ipynb
qpub/: __init__.py  base.py  converters.py  docs_.py  files.py  flit_.py  lint.py  local_.py  main.py  noxfile.py  poetry_.py  readme.md  setuptools_.py  tasks.py  test_.py  util.py
qpub/docs/: test_qpub.ipynb
qpub/template/: Python.gitignore  __init__.py  _config.yml  flags.gitignore  postBuild  pyproject.toml  python.yaml
qpub/tests/: test_dgaf.py  test_qpub.ipynb
src/: _test_magic.ipynb  test_dgaf.ipynb  test_dgaf.py  test_qpub.ipynb  test_qpub.py
src/dgaf/: __init__.py  __main__.py  base.py  configure.py  docs.py  dodo.py  files.py  init.py  install.py  lint.py  noxfile.py  readme.md  sessions.py  tasks.py  test.py  util.py
src/dgaf/templates/: _config.json  conf.json  flakehell.json  flit.json  poetry.json  readme.md  setuptools.toml.json
src/qpub/: __init__.py  __main__.py  base.py  configure.py  dgaf.code-workspace  docs.py  dodo.py  files.py  lint.py  noxfile.py  readme.md
src/qpub/templates/: conf.py  flit.json  precommit.json  readme.md  rever.xsh.tpl  setuptools.cfg.json
