[tool]
[tool.pytest]
[tool.pytest.ini_options]
addopts = "-s"
minversion = 6.2
norecursedirs = "*.egg-info .eggs .gitignore .ipynb_checkpoints .nox .pytest_cache .vscode __pycache__ _build dist docs/_build"

[tool.flakehell]
base = "https://raw.githubusercontent.com/life4/flakehell/master/pyproject.toml"
exclude = [".ipynb_checkpoints", "setup.py"]
format = "grouped"
max_line_length = 120
show_source = false

[tool.flakehell.plugins]
pycodestyle = ["-W503", "-E722", "-E999"]
pyflakes = ["-F405"]

[tool.flit]
[tool.flit.scripts]
dgaf = "dgaf.__main__:main"

[tool.flit.metadata]
author = "tonyfast"
author-email = "tony.fast@gmail.com"
classifiers = []
home-page = "https://github.com/deathbeds/dgaf"
keywords = ""
license = ""
maintainer = "tonyfast"
maintainer-email = "tony.fast@gmail.com"
module = "dgaf"
requires = ["nox", "typer"]
requires-python = ">=3.7"

[tool.flit.metadata.requires-extra]
core = [
  "doit",
  "GitPython",
  "pathspec",
]
dev = []
doc = ["jupyter-book"]
extras = [
  "depfinder",
  "aiofiles",
  "appdirs",
  "typer",
  "json-e",
  "flit",
  "poetry",
  "requests-cache",
  "tomlkit",
  "nox",
]
test = ["pytest", "pytest-sugar", "nbval", "importnb", "pytest", "poetry", "importlib_metadata", "flit", "nbformat"]

[tool.flit.metadata.urls]

[tool.flit.sdist]
include = []

[tool.flit.entrypoints]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core>=2,<4"]
