# https://flit.readthedocs.io

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = ""
author = ""
author-email = ""
home-page = ""
classifiers = []
requires=[]

[tool.flit.metadata.requires-extra]
[tool.flit.entrypoints.pytest11]
[tool.flit.entrypoints.console_scripts]
[tool.pytest.ini_options]
[tool.dgaf.env]
[tool.semantic_release]
[tool.poetry]
[tool.black]
[tool.coverage]
[tool.tox]