# https://python-poetry.org/

[tool.poetry]
name = ""
version = ""
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = ""
author = ""
author-email = ""
requires = []
keywords = ""
home-page = ""
license = ""
description-file = ""

[tool.black]
[tool.coverage]
[tool.tox]
[tool.pytest.ini_options]
[tool.dgaf.env]
[tool.semantic_release]
